--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "arturDev",
   "license": "ISC",
   "dependencies": {
+    "@studydefi/money-legos": "^2.4.1",
     "@uniswap/sdk": "^3.0.2",
     "dotenv": "^8.2.0",
     "web3": "^1.3.1"
