--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@studydefi/money-legos": "^2.4.1",
+    "@truffle/hdwallet-provider": "^1.2.1",
     "@uniswap/sdk": "^3.0.2",
     "dotenv": "^8.2.0",
     "web3": "^1.3.1"
